--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -1,15 +1,108 @@
 main:
-  - name: posts
-    url: /posts/
+  - name: 박물관이용
+    url: /guide
     weight: -110
-  - name: all
-    url: /posts/
+  - name: 관람예약 및 안내
+    url: /guide/admission
     weight: 1
-    parent: posts
-  - name: featured posts
-    url: /posts/featured
+    parent: 박물관이용
+  - name: 오시는 길
+    url: /guide/location
     weight: 2
-    parent: posts
-  - name: about
-    url: /about/
+    parent: 박물관이용
+  - name: 뮤지엄 샵
+    url: /guide/store
+    weight: 3
+    parent: 박물관이용
+
+  - name: 전시
+    url: /exhibition
     weight: -100
+  - name: 상설전시
+    url: /exhibition/permanent
+    weight: 1
+    parent: 전시
+  - name: 특별전시
+    url: /exhibition/special
+    weight: 2
+    parent: 전시
+  - name: 소장품
+    url: /exhibition/collections
+    weight: 4
+    parent: 전시
+
+  - name: 아카이브
+    url: /archive
+    weight: -90
+  - name: 이달의 기록
+    url: /archive/featured
+    weight: 1
+    parent: 아카이브
+  - name: 기록물 이용
+    url: /archive/usage
+    weight: 2
+    parent: 아카이브
+  - name: 기록물 기증
+    url: /archive/donate
+    weight: 3
+    parent: 아카이브
+
+  - name: 연구/교육
+    url: /research-and-learning
+    weight: -90
+  - name: 온라인교육
+    url: research-and-learning/elearning
+    weight: 1
+    parent: 연구/교육   
+  - name: 교육신청
+    url: /research-and-learning/courses
+    weight: 2
+    parent: 연구/교육
+  - name: 교육자료
+    url: /research-and-learning/resources
+    weight: 3
+    parent: 연구/교육
+  - name: 학술행사
+    url: /research-and-learning/events
+    weight: 4
+    parent: 연구/교육            
+
+  - name: 소식/참여
+    url: /connect
+    weight: -80
+  - name: 공지사항
+    url: /connect/notice
+    weight: 1
+    parent: 소식/참여
+  - name: 뉴스레터
+    url: /connect/newsletter
+    weight: 2
+    parent: 소식/참여
+  - name: 자원활동신청
+    url: /connect/volunteer
+    weight: 3
+    parent: 소식/참여
+  - name: 박물관 후원
+    url: /connect/support
+    weight: 4
+    parent: 소식/참여
+
+  - name: 박물관소개
+    url: /about
+    weight: -70
+  - name: 인사말
+    url: /about/greetings
+    weight: 1
+    parent: 박물관소개
+  - name: 미션/비전
+    url: /about/mission-and-vision
+    weight: 2
+    parent: 박물관소개
+  - name: 연혁
+    url: /about/history
+    weight: 3
+    parent: 박물관소개
+  - name: 기부자의벽
+    url: /about/donor-wall
+    weight: 4
+    parent: 박물관소개
