baseURL 을 지정하고, 고객쪽 netlify계정과 연결합니다.

--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -1,5 +1,5 @@
 title: 전쟁과여성인권박물관
-baseURL: https://production.womenandwarmuseum.net
+baseURL: https://public.womenandwarmuseum.net
 
 languageCode: ko-kr
 defaultContentLanguage: ko
