--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,77 +8,89 @@ collections:
     label: '메인 슬라이드'
     folder: 'content/slides'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
       preview: false
     fields:
-      - { label: '상단메세지', name: 'upper_message', widget: 'string' }
-      - { label: '제목', name: 'title', widget: 'string' }
-      - { label: '부제목', name: 'sub_title', widget: 'string' }      
-      - { label: '날짜', name: 'date', widget: 'datetime' }
-      - { label: "슬라이드 배경이미지", name: "image", widget: "image" } 
-      - { label: '버튼제목', name: 'button_name', widget: 'string' }
-      - { label: '버튼URL', name: 'button_url', widget: 'string' }
+      - { label: '상단메세지', name: 'upper_message', widget: 'string', required: false }
+      - { label: '제목', name: 'title', widget: 'string', required: false }
+      - { label: '부제목', name: 'sub_title', widget: 'string', required: false }
+      - { label: '날짜', name: 'date', widget: 'datetime', required: false } 
+      - { label: "슬라이드 배경이미지", name: "image", widget: "image" }
+      - { label: '버튼제목', name: 'button_name', widget: 'string', required: false }
+      - { label: '버튼URL', name: 'button_url', widget: 'string', required: false }
   - name: 'notice'
     label: '공지사항'
     folder: 'content/connect/notice'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
-      preview: true
+      preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
       - { label: '날짜', name: 'date', widget: 'datetime' }
-      - { label: '요약', name: 'summary', widget: 'string' }
-      - { label: '대표이미지', name: 'image', widget: 'image' }       
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
       - { label: '본문', name: 'body', widget: 'markdown' }
-      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', hint: 'true 메인공개' }
-      - { label: '목록 고정', name: 'pinned', widget: 'boolean', hint: 'true 목록고정' }                  
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개' }
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }     
   - name: 'featured'
     label: '이달의 기록'
     folder: 'content/archive/featured'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
-      preview: true
+      preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: '요약', name: 'summary', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개' }
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }       
   - name: 'courses'
     label: '교육신청'
     folder: 'content/research-and-learning/courses'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
-      preview: true
+      preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Summary', name: 'summary', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image' }
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개' }
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }       
   - name: 'resources'
     label: '교육자료'
     folder: 'content/research-and-learning/resources'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
-      preview: true
+      preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Summary', name: 'summary', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개' }
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }
   - name: 'events'
     label: '학술행사'
     folder: 'content/research-and-learning/events'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
-      preview: true
+      preview: false
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Summary', name: 'summary', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }                                      
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개' }
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }                                      
