--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -95,4 +95,13 @@ collections:
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개' }
-      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }                                      
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정' }
+  - name: 'volunteer'
+    label: '자원활동신청 ON/OFF'
+    folder: 'content/connect/volunteer'
+    create: false
+    editor:
+      preview: false
+    fields:
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '오픈여부', name: 'status', widget: 'boolean', default: open, hint: 'open / close' }                                         
