--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,8 @@ collections:
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
-      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }     
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
+      - { label: '관리화면 비노출', name: 'invisible', widget: 'boolean', default: false, required: false }
   - name: 'featured'
     label: '이달의 기록'
     folder: 'content/archive/featured'
@@ -52,6 +53,7 @@ collections:
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }       
+      - { label: '관리화면 비노출', name: 'invisible', widget: 'boolean', default: false, required: false }
   - name: 'programs'
     label: '프로그램'
     folder: 'content/research-and-learning/programs'
@@ -69,6 +71,7 @@ collections:
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '메인 공개', name: 'always', widget: 'boolean', default: false, hint: 'true 상시공개 교육프로그램', required: false }      
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }       
+      - { label: '관리화면 비노출', name: 'invisible', widget: 'boolean', default: false, required: false }
   - name: 'resources'
     label: '교육자료'
     folder: 'content/research-and-learning/resources'
@@ -85,6 +88,7 @@ collections:
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
+      - { label: '관리화면 비노출', name: 'invisible', widget: 'boolean', default: false, required: false }
   - name: 'events'
     label: '학술행사'
     folder: 'content/research-and-learning/events'
@@ -101,6 +105,7 @@ collections:
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
+      - { label: '관리화면 비노출', name: 'invisible', widget: 'boolean', default: false, required: false }
   - name: 'volunteer'
     label: '자원활동신청 ON/OFF'
     files:
