--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -27,21 +27,21 @@ main:
     weight: 4
     parent: 전시
 
-  - name: 아카이브
+  - name: 자료실
     url: /archive
     weight: -90
   - name: 이달의 기록
     url: /archive/featured
     weight: 1
-    parent: 아카이브    
+    parent: 자료실    
   - name: 기록물 이용
     url: /archive/usage
     weight: 2
-    parent: 아카이브
+    parent: 자료실
   - name: 기록물 기증
     url: /archive/donate
     weight: 3
-    parent: 아카이브        
+    parent: 자료실
 
   - name: 소식/참여
     url: /connect
