--- a/config/_default/config.yml
+++ b/config/_default/config.yml
@@ -1,5 +1,5 @@
 title: 전쟁과여성인권박물관
-baseURL: https://public.womenandwarmuseum.net
+baseURL: https://womenandwarmuseum.net
 
 languageCode: ko-kr
 defaultContentLanguage: ko
