site-feature-image를 추가합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -3,7 +3,7 @@
 title: 전쟁과여성인권박물관
 description: 전쟁과여성인권박물관 홈페이지에 오신것을 환영합니다.
 images:
-  - img/site-feature-image.png
+  - img/site-feature-image.jpeg
 logo: images/logo-main.png
 
 license:
