--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -29,6 +29,7 @@ collections:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
@@ -44,6 +45,7 @@ collections:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }      
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
@@ -60,6 +62,7 @@ collections:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }      
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image' }
@@ -77,6 +80,7 @@ collections:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }      
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
@@ -92,6 +96,7 @@ collections:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }      
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
