--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"url": "https://github.com/team-durumi/wwm.git"
 	},
 	"devDependencies": {
+		"@kingshott/iodine": "^7.0.1",
 		"autoprefixer": "^10.3.1",
 		"postcss": "^8.3.6",
 		"postcss-cli": "^8.3.1",
