netlify 빌드 커맨드 관련 #2 -- 빌드하기 전에 모듈을 전체 업데이트합니다.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "hugo mod tidy && hugo --gc --minify"
+command = "hugo mod get -u ./... && hugo --gc --minify"
 
 [context.production.environment]
 HUGO_VERSION = "0.91.2"
