특별전시  / 메뉴를 추가합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -37,6 +37,7 @@ googleFonts:
 cfImagePrefix: 'https://durumi.io/cdn-cgi/image'
 cfImageStyles:
   thumb: 'fit=scale-down,width=300'
+  thumbStores: 'fit=scale-down,width=800'  
   full: 'fit=scale-down,width=1920'
 
 stibee:
