--- a/config/_default/menus.yml
+++ b/config/_default/menus.yml
@@ -21,10 +21,14 @@ main:
   - name: 상설전시
     url: /exhibition
     weight: 1
-    parent: 전시    
+    parent: 전시
+  - name: 특별전시
+    url: /exhibition/ex-04/section-01
+    weight: 2
+    parent: 전시     
   - name: 소장품
     url: /items
-    weight: 4
+    weight: 3
     parent: 전시
 
   - name: 자료실
