--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -43,6 +43,6 @@ cfImageStyles:
 stibee:
   accessToken: DONTCOMMIT
   listIdSubscribe: 112752
-  listIdArchive: 105093
+  listIdDev: 105093
   endpointEmailList: 'https://stibee.com/api/v1.0/feeds'
   enpointSubscribe: 'https://page.stibee.com/api/v1.0/lists'
