뉴스레터 관련 설정값을 변경합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -42,7 +42,7 @@ cfImageStyles:
 
 stibee:
   accessToken: DONTCOMMIT
+  endpointSubscribe: 'https://page.stibee.com/api/v1.0/lists'  
   listIdSubscribe: 112752
-  listIdDev: 105093
-  endpointEmailList: 'https://stibee.com/api/v1.0/feeds'
-  enpointSubscribe: 'https://page.stibee.com/api/v1.0/lists'
+  endpointEmailList: 'https://page.stibee.com/archives/105093/emails'  
+  listIdPublic: 105093 
