--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -104,11 +104,11 @@ collections:
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
   - name: 'volunteer'
     label: '자원활동신청 ON/OFF'
-    files:
-      - label: "자원활동신청 ON/OFF"
-        name: "volunteer-form-status"
-        widget: "select"
-        file: "content/connect/volunteer.md"
+    file: "content/connect/volunteer.md"
+    fields:
+      - label: 'ON/OFF', 
+        name: 'status', 
+        widget: 'select',   
         options:
           - { label: "입력폼 활성 Open", value: "open" }
           - { label: "비활성 Close", value: "close" }
