--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -68,7 +68,7 @@ collections:
       - { label: '접수/선정', name: 'contact_type', widget: 'string' }
       - { label: '대상', name: 'program_target', widget: 'string' }
       - { label: '교육시간', name: 'program_time', widget: 'string' }
-      - { label: '모집인원', name: 'programe_member', widget: 'string' }
+      - { label: '모집인원', name: 'program_member', widget: 'string' }
       - { label: '문의처', name: 'program_contact', widget: 'string' }                        
       - { label: '대표이미지', name: 'image', widget: 'image' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
@@ -94,7 +94,6 @@ collections:
         media_library:
           config:
             multiple: true
-      - { label: '본문', name: 'body', widget: 'markdown' }      
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
@@ -111,6 +110,12 @@ collections:
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - label: "첨부파일"
+        name: "papers_materials"
+        widget: "file"
+        media_library:
+          config:
+            multiple: true      
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
   - name: 'volunteer'
