--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,9 @@
   directory = "functions/gsheet"
   node_bundler = "esbuild"
   external_node_modules = ["google-spreadsheet"]
+
+[dev]
+  command = 'hugo serve -D'
+  functionsPort = 8889
+  port = 8888
+  targetPort = 1313
