썸네일 대표 이미지를 교체합니다.

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -1,9 +1,9 @@
 # themeNoPipe: true
 
 title: 전쟁과여성인권박물관
-description: 전쟁과여성인권박물관 홈페이지에 오신것을 환영합니다.
+description: 일본군'위안부' 생존자들이 겪었던 역사를 기억하고 교육하는 공간
 images:
-  - img/site-feature-image.jpeg
+  - img/site-feature-image.jpg
 logo: images/logo-main.png
 
 license:
