--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -52,6 +52,22 @@ collections:
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }       
+  - name: 'previous'
+    label: '이전 전시'
+    folder: 'content/exhibition/previous'
+    create: true
+    slug: '{{slug}}' 
+    editor:
+      preview: false
+    fields:
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }      
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
+      - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false } 
   - name: 'programs'
     label: '프로그램'
     folder: 'content/learning-and-research/programs'
