netlify cms 연구자료 입력창(국,영,일)을 분리합니다.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -121,15 +121,15 @@ collections:
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
   - name: 'papers'
-    label: '연구자료'
-    folder: 'content/learning-and-research/papers'
+    label: '연구자료(국문)'
+    folder: 'content/learning-and-research/papers/ko'
     create: true
     slug: '{{slug}}'
     editor:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
-      - { label: '작성자', name: 'author', widget: 'string' }      
+      - { label: '작성자', name: 'author', widget: 'string' }
       - { label: '날짜', name: 'date', widget: 'datetime' }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
       - { label: '대표이미지', name: 'image', widget: 'image', required: false }
@@ -138,9 +138,51 @@ collections:
         widget: "file"
         media_library:
           config:
-            multiple: true      
+            multiple: true
       - { label: '본문', name: 'body', widget: 'markdown' }
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
+  - name: 'papers'
+    label: '연구자료(영문)'
+    folder: 'content/learning-and-research/papers/en'
+    create: true
+    slug: '{{slug}}'
+    editor:
+      preview: false
+    fields:
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - label: "첨부파일"
+        name: "paper_materials"
+        widget: "file"
+        media_library:
+          config:
+            multiple: true
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
+  - name: 'papers'
+    label: '연구자료(일문)'
+    folder: 'content/learning-and-research/papers/jp'
+    create: true
+    slug: '{{slug}}'
+    editor:
+      preview: false
+    fields:
+      - { label: '제목', name: 'title', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string' }
+      - { label: '날짜', name: 'date', widget: 'datetime' }
+      - { label: '요약', name: 'summary', widget: 'string', required: false }
+      - { label: '대표이미지', name: 'image', widget: 'image', required: false }
+      - label: "첨부파일"
+        name: "paper_materials"
+        widget: "file"
+        media_library:
+          config:
+            multiple: true
+      - { label: '본문', name: 'body', widget: 'markdown' }
+      - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }      
   - name: 'volunteer'
     label: '자원활동신청'
     files:
