--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,7 +53,7 @@ collections:
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }       
   - name: 'previous'
-    label: '이전 전시'
+    label: '주요 전시'
     folder: 'content/exhibition/previous'
     create: true
     slug: '{{slug}}' 
