프로그램 관련 설정을 조정합니다.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -77,19 +77,19 @@ collections:
       preview: false
     fields:
       - { label: '제목', name: 'title', widget: 'string' }
-      - { label: '작성자', name: 'author', widget: 'string' }
+      - { label: '작성자', name: 'author', widget: 'string', required: false }
       - { label: '요약', name: 'summary', widget: 'string', required: false }
-      - { label: '교육날짜', name: 'date', widget: 'datetime' }
-      - { label: '접수기간', name: 'application_end_date', widget: 'string' }
-      - { label: '접수/선정', name: 'contact_type', widget: 'string' }
-      - { label: '대상', name: 'program_target', widget: 'string' }
-      - { label: '교육시간', name: 'program_time', widget: 'string' }
-      - { label: '모집인원', name: 'program_member', widget: 'string' }
-      - { label: '문의처', name: 'program_contact', widget: 'string' }                        
+      - { label: '일시', name: 'date', widget: 'datetime', required: false }
+      - { label: '접수기간', name: 'application_end_date', widget: 'string', required: false }
+      - { label: '접수', name: 'contact_type', widget: 'string', required: false }
+      - { label: '대상', name: 'program_target', widget: 'string', required: false }
+      - { label: '모집인원', name: 'program_member', widget: 'string', required: false }
+      - { label: '문의처', name: 'program_contact', widget: 'string', required: false }                        
       - { label: '대표이미지', name: 'image', widget: 'image' }
       - label: "첨부파일"
         name: "program_materials"
         widget: "file"
+        required: false
         media_library:
           config:
             multiple: true      
@@ -114,6 +114,7 @@ collections:
       - label: "첨부파일"
         name: "resource_materials"
         widget: "file"
+        required: false
         media_library:
           config:
             multiple: true
@@ -136,6 +137,7 @@ collections:
       - label: "첨부파일"
         name: "paper_materials"
         widget: "file"
+        required: false
         media_library:
           config:
             multiple: true
@@ -157,6 +159,7 @@ collections:
       - label: "첨부파일"
         name: "paper_materials"
         widget: "file"
+        required: false
         media_library:
           config:
             multiple: true
@@ -178,6 +181,7 @@ collections:
       - label: "첨부파일"
         name: "paper_materials"
         widget: "file"
+        required: false
         media_library:
           config:
             multiple: true
