--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -95,7 +95,7 @@ collections:
           config:
             multiple: true      
       - { label: '메인 공개', name: 'home_sticky', widget: 'boolean', default: false, hint: 'true 메인공개', required: false }
-      - { label: '메인 공개', name: 'always', widget: 'boolean', default: false, hint: 'true 상시공개 교육프로그램', required: false }      
+      - { label: '상시공개 프로그램 설정', name: 'always', widget: 'boolean', default: false, hint: 'true 상시공개 교육프로그램', required: false }      
       - { label: '목록 고정', name: 'pinned', widget: 'boolean', default: false, hint: 'true 목록고정', required: false }
       - { label: '관리화면 비노출', name: 'invisible', widget: 'boolean', default: false, required: false }
       - { label: '본문', name: 'body', widget: 'markdown' }      
